dev/tests/cases/pos/25_std_selective.tv
apply std::math;

df main() -> void {
    echo!(pow(3, 3));
    echo!(gcd(12, 8));
}
