dev/tests/cases/neg/14_unannotated_list.tv
df main() -> void {
    set xs = list_new();
    echo!(len(xs));
}
